// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RankingLabel /> should render correctly 1`] = `
<RankingLabelstyle__RankingLabelContainer>
  <Label>
    bonjour
  </Label>
  <p
    className="description"
    dangerouslySetInnerHTML={
      Object {
        "__html": "ceci est la description",
      }
    }
  />
  <Image
    alt=""
    height="auto"
    objectFit="cover"
    src="https://i.picsum.photos/id/257/200/200.jpg"
    width="100%"
  />
  <button
    className="btn-pick-item"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <Icon
      name="arrow-thick-circle-down"
      size={18}
    />
    <FormattedMessage
      id="global.form.ranking.select"
      values={Object {}}
    />
  </button>
</RankingLabelstyle__RankingLabelContainer>
`;

exports[`<RankingLabel /> should render correctly when disabled 1`] = `
<RankingLabelstyle__RankingLabelContainer>
  <Label>
    bonjour
  </Label>
  <p
    className="description"
    dangerouslySetInnerHTML={
      Object {
        "__html": "ceci est la description",
      }
    }
  />
  <Image
    alt=""
    height="auto"
    objectFit="cover"
    src="https://i.picsum.photos/id/257/200/200.jpg"
    width="100%"
  />
  <button
    className="btn-pick-item"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <Icon
      name="arrow-thick-circle-down"
      size={18}
    />
    <FormattedMessage
      id="global.form.ranking.select"
      values={Object {}}
    />
  </button>
</RankingLabelstyle__RankingLabelContainer>
`;

exports[`<RankingLabel /> should render correctly without description 1`] = `
<RankingLabelstyle__RankingLabelContainer>
  <Label>
    bonjour
  </Label>
  <Image
    alt=""
    height="auto"
    objectFit="cover"
    src="https://i.picsum.photos/id/257/200/200.jpg"
    width="100%"
  />
  <button
    className="btn-pick-item"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <Icon
      name="arrow-thick-circle-down"
      size={18}
    />
    <FormattedMessage
      id="global.form.ranking.select"
      values={Object {}}
    />
  </button>
</RankingLabelstyle__RankingLabelContainer>
`;

exports[`<RankingLabel /> should render correctly without image 1`] = `
<RankingLabelstyle__RankingLabelContainer>
  <Label>
    bonjour
  </Label>
  <p
    className="description"
    dangerouslySetInnerHTML={
      Object {
        "__html": "ceci est la description",
      }
    }
  />
  <button
    className="btn-pick-item"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <Icon
      name="arrow-thick-circle-down"
      size={18}
    />
    <FormattedMessage
      id="global.form.ranking.select"
      values={Object {}}
    />
  </button>
</RankingLabelstyle__RankingLabelContainer>
`;
